Improve diagnostics for CGLIB ClassLoader mismatch with --add-opens hint
Closes gh-28747